@@ -22,27 +22,36 @@ import org.jkiss.dbeaver.DBException;
 import org.jkiss.dbeaver.Log;
 import org.jkiss.dbeaver.model.DBPObject;
 import org.jkiss.dbeaver.model.DBPScriptObject;
+import org.jkiss.dbeaver.model.DBUtils;
 import org.jkiss.dbeaver.model.ai.AIConstants;
 import org.jkiss.dbeaver.model.ai.AIMessage;
 import org.jkiss.dbeaver.model.ai.AIMessageType;
-import org.jkiss.dbeaver.model.ai.engine.AIEngine;
-import org.jkiss.dbeaver.model.ai.prompt.AIPromptFormatter;
+import org.jkiss.dbeaver.model.ai.AIQueryConfirmationRule;
+import org.jkiss.dbeaver.model.ai.internal.AIMessages;
 import org.jkiss.dbeaver.model.exec.DBCExecutionContext;
+import org.jkiss.dbeaver.model.exec.DBCTransactionManager;
 import org.jkiss.dbeaver.model.runtime.DBRProgressMonitor;
 import org.jkiss.dbeaver.model.secret.DBSSecretController;
+import org.jkiss.dbeaver.model.sql.SQLQueryCategory;
+import org.jkiss.dbeaver.model.sql.SQLScriptElement;
 import org.jkiss.dbeaver.model.struct.DBSEntity;
 import org.jkiss.dbeaver.model.struct.DBSEntityConstraint;
 import org.jkiss.dbeaver.model.struct.DBSObject;
-import org.jkiss.dbeaver.model.struct.DBSObjectContainer;
 import org.jkiss.dbeaver.model.struct.rdb.*;
 import org.jkiss.dbeaver.registry.DataSourceDescriptor;
+import org.jkiss.dbeaver.runtime.DBWorkbench;
 import org.jkiss.utils.CommonUtils;
 
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 
 public final class AIUtils {
+    /**
+     * How many characters we roughly get from a single token.
+     */
+    public static final int TOKEN_TO_CHAR_RATIO = 2;
 
     private static final Log log = Log.getLog(AIUtils.class);
 
@@ -79,41 +88,42 @@ public final class AIUtils {
     /**
      * Truncates messages to fit into the given number of tokens.
      *
-     * @param chatMode  true if chat mode is enabled
      * @param messages  list of messages
      * @param maxTokens maximum number of tokens
      * @return list of truncated messages
      */
     @NotNull
     public static List<AIMessage> truncateMessages(
-        boolean chatMode,
         @NotNull List<AIMessage> messages,
         int maxTokens
     ) {
-        final List<AIMessage> pending = new ArrayList<>(messages);
+        final List<AIMessage> pending = new ArrayList<>(filterEmptyMessages(messages));
         final List<AIMessage> truncated = new ArrayList<>();
         int remainingTokens = maxTokens - 20; // Just to be sure
 
-        if (!pending.isEmpty()) {
-            if (pending.get(0).getRole() == AIMessageType.SYSTEM) {
-                // Always append main system message and leave space for the next one
-                AIMessage msg = pending.remove(0);
-                AIMessage truncatedMessage = truncateMessage(msg, remainingTokens - 50);
-                remainingTokens -= countContentTokens(truncatedMessage.getContent());
-                truncated.add(msg);
+        if (pending.isEmpty()) {
+            return truncated; // Nothing to truncate
+        } else if (pending.size() == 1) {
+            // If we have only one message, we can return it as is
+            AIMessage singleMessage = pending.getFirst();
+            if (countContentTokens(singleMessage.getContent()) <= remainingTokens) {
+                return List.of(singleMessage);
+            } else {
+                return List.of(truncateMessage(singleMessage, remainingTokens));
             }
+        } else if (pending.getFirst().getRole() == AIMessageType.SYSTEM) {
+            // Always append main system message and leave space for the next one
+            AIMessage msg = pending.removeFirst();
+            AIMessage truncatedMessage = truncateMessage(msg, remainingTokens - 50);
+            remainingTokens -= countContentTokens(truncatedMessage.getContent());
+            truncated.add(msg);
         }
 
         for (AIMessage message : pending) {
             final int messageTokens = message.getContent().length();
 
             if (remainingTokens < 0 || messageTokens > remainingTokens) {
-                // Exclude old messages that don't fit into given number of tokens
-                if (chatMode) {
-                    break;
-                } else {
-                    // Truncate message itself
-                }
+                break;
             }
 
             AIMessage truncatedMessage = truncateMessage(message, remainingTokens);
@@ -141,7 +151,7 @@ public final class AIUtils {
     }
 
     private static String removeContentTokens(String content, int tokensToRemove) {
-        int charsToRemove = tokensToRemove * 2;
+        int charsToRemove = tokensToRemove * TOKEN_TO_CHAR_RATIO;
         if (charsToRemove >= content.length()) {
             return "";
         }
@@ -149,30 +159,7 @@ public final class AIUtils {
     }
 
     private static int countContentTokens(String content) {
-        return content.length() / 2;
-    }
-
-    /**
-     * Processes completion text.
-     */
-    @NotNull
-    public static String processCompletion(
-        @NotNull DBRProgressMonitor monitor,
-        @NotNull DBCExecutionContext executionContext,
-        @NotNull DBSObjectContainer mainObject,
-        @NotNull String completionText,
-        @NotNull AIPromptFormatter formatter,
-        boolean isChatAPI
-    ) {
-        if (CommonUtils.isEmpty(completionText)) {
-            return "";
-        }
-
-        if (!isChatAPI) {
-            completionText = "SELECT " + completionText.trim() + ";";
-        }
-
-        return formatter.postProcessGeneratedQuery(monitor, mainObject, executionContext, completionText).trim();
+        return content.length() / TOKEN_TO_CHAR_RATIO;
     }
 
     /**
@@ -194,19 +181,9 @@ public final class AIUtils {
     }
 
     /**
-     * Computes the maximum number of tokens available for a request based on the engine's context size.
-     *
-     * @param engine the completion engine
-     * @param monitor the progress monitor
-     */
-    public static int getMaxRequestTokens(@NotNull AIEngine engine, @NotNull DBRProgressMonitor monitor) throws DBException {
-        return engine.getMaxContextSize(monitor) - AIConstants.MAX_RESPONSE_TOKENS;
-    }
-
-    /**
      * Retrieves the DDL for the given DBSObject if applicable.
      *
-     * @param object the DBSObject from which to retrieve the DDL
+     * @param object  the DBSObject from which to retrieve the DDL
      * @param monitor the progress monitor
      */
     public static String getObjectDDL(@Nullable DBSObject object, @NotNull DBRProgressMonitor monitor) {
@@ -217,17 +194,92 @@ public final class AIUtils {
         ) {
             if (object instanceof DBPScriptObject scriptObject) {
                 try {
-                    return scriptObject.getObjectDefinitionText(monitor, Map.of(
-                        DBPScriptObject.OPTION_INCLUDE_COMMENTS, false,
-                        DBPScriptObject.OPTION_INCLUDE_NESTED_OBJECTS, false,
-                        DBPScriptObject.OPTION_SKIP_INDEXES, true, // Exclude indexes
-                        DBPScriptObject.OPTION_SKIP_DROPS, true // Exclude --DROP
-                    ));
+                    return scriptObject.getObjectDefinitionText(
+                        monitor, Map.of(
+                            DBPScriptObject.OPTION_INCLUDE_COMMENTS, false,
+                            DBPScriptObject.OPTION_INCLUDE_NESTED_OBJECTS, false,
+                            DBPScriptObject.OPTION_SKIP_INDEXES, true, // Exclude indexes
+                            DBPScriptObject.OPTION_SKIP_DROPS, true // Exclude --DROP
+                        )
+                    );
                 } catch (DBException e) {
                     log.debug(e);
                 }
             }
         }
         return null;
+    }
+
+    public static boolean confirmExecutionIfNeeded(
+        @NotNull List<SQLScriptElement> scriptElements,
+        boolean isCommand
+    ) {
+        Set<SQLQueryCategory> queryCategories = SQLQueryCategory.categorizeScript(scriptElements);
+        if (queryCategories.contains(SQLQueryCategory.DDL) && isConfirmationNeeded(AIConstants.AI_CONFIRM_DDL)) {
+            String message = isCommand ? AIMessages.ai_execute_command_confirm_ddl_message :
+                AIMessages.ai_execute_query_confirm_ddl_message;
+            return confirmExecute(AIMessages.ai_execute_query_title, message);
+        }
+        if (queryCategories.contains(SQLQueryCategory.DML) && isConfirmationNeeded(AIConstants.AI_CONFIRM_DML)) {
+            String message = isCommand ? AIMessages.ai_execute_command_confirm_dml_message :
+                AIMessages.ai_execute_query_confirm_dml_message;
+            return confirmExecute(AIMessages.ai_execute_query_title, message);
+        }
+        boolean isSqlOrUnknown = queryCategories.contains(SQLQueryCategory.SQL) ||
+            queryCategories.contains(SQLQueryCategory.UNKNOWN);
+        if (isSqlOrUnknown && isConfirmationNeeded(AIConstants.AI_CONFIRM_SQL)) {
+            String message = isCommand ? AIMessages.ai_execute_command_confirm_sql_message :
+                AIMessages.ai_execute_query_confirm_sql_message;
+            return confirmExecute(AIMessages.ai_execute_query_title, message);
+        }
+        return true;
+    }
+
+    public static void disableAutoCommitIfNeeded(
+        @NotNull DBRProgressMonitor monitor,
+        @NotNull List<SQLScriptElement> scriptElements,
+        @Nullable DBCExecutionContext context
+    ) throws DBException {
+        if (!SQLQueryCategory.categorizeScript(scriptElements).contains(SQLQueryCategory.DML)) {
+            return;
+        }
+
+        AIQueryConfirmationRule dmlRule = CommonUtils.valueOf(
+            AIQueryConfirmationRule.class,
+            DBWorkbench.getPlatform().getPreferenceStore().getString(AIConstants.AI_CONFIRM_DML),
+            AIQueryConfirmationRule.CONFIRM
+        );
+        if (dmlRule == AIQueryConfirmationRule.DISABLE_AUTOCOMMIT) {
+            DBCTransactionManager txnManager = DBUtils.getTransactionManager(context);
+            if (txnManager != null && txnManager.isAutoCommit()) {
+                txnManager.setAutoCommit(monitor, false);
+                showAutoCommitDisabledNotification();
+            }
+        }
+    }
+
+    private static List<AIMessage> filterEmptyMessages(@NotNull List<AIMessage> messages) {
+        return messages.stream()
+            .filter(message -> !message.getContent().isBlank())
+            .toList();
+    }
+
+    private static void showAutoCommitDisabledNotification() {
+        DBWorkbench.getPlatformUI().showWarningNotification(
+            AIMessages.ai_execute_query_auto_commit_disabled_title,
+            AIMessages.ai_execute_query_auto_commit_disabled_message
+        );
+    }
+
+    private static boolean isConfirmationNeeded(@NotNull String actionName) {
+        return CommonUtils.valueOf(
+            AIQueryConfirmationRule.class,
+            DBWorkbench.getPlatform().getPreferenceStore().getString(actionName),
+            AIQueryConfirmationRule.EXECUTE
+        ) == AIQueryConfirmationRule.CONFIRM;
+    }
+
+    private static boolean confirmExecute(String title, String message) {
+        return DBWorkbench.getPlatformUI().confirmAction(title, message, true);
     }
 }
